--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
   },
   "homepage": "https://github.com/sharon-zhu/scratchproj#readme",
   "dependencies": {
-    "react": "^17.0.1",
+    "bootstrap": "^4.6.0",
     "express": "^4.17.1",
-    "react-dom": "^16.3.1",
     "mongoose": "^5.11.15",
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
+    "react-dom": "^16.3.1",
     "webpack-dev-server": "^3.11.2"
   },
-
   "devDependencies": {
     "@babel/core": "^7.12.13",
     "@babel/preset-env": "^7.12.13",
