--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/sharon-zhu/scratchproj#readme",
   "dependencies": {
+    "@petfinder/petfinder-js": "^1.0.6",
     "bootstrap": "^4.6.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.15",
